--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.3",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -39,7 +40,10 @@
     "method-override": "^3.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
-    "nodemailer": "^6.10.0"
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.10.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
